2017-January-21 Struan Robertson

		* ConditionsManager.h/.cpp, System.h/.cpp, Analysis.h: Write out parameter values and 
		warnings to xml output.

2017-January-28 Chris Morley

		Update of schema to include DefinedDensityOfStates and, more generally, me:DOSCMethods
		with data. Edit example and Mesmer QA files to remove old stylesheet statements, to
		comply with the current recommendations on DOSCMethods and similar, although Mesmer
		still parses the older forms.
		schemas/memsmer.xsd, schemas/mesmerPlugins.xsd, schemas/CMLforMesmer.xsd,
		MesmerQA/*.xml, examples/*.xml/
		gDensityOfStates.cpp(gDensityOfStates::ReadDOSMethods()) parse for xsi:type attribute;

2017-January-22 Struan Robertson

		* Error.cpp, System.cpp: Changes to fix broken examples.

2017-January-21 Struan Robertson

		* ConditionsManager.h/.cpp, System.h/.cpp, TMatrix.h	parallelManager.h, fitting.cpp: 
		Parallel output of the covariance matrix.

2017-January-17 Struan Robertson

		* CollisionOperator.cpp, ConditionsManager.cpp, main.cpp, error.h/.cpp, System.h, 
		parallelManager.h, fitting.cpp, Marquadt.cpp, FittingUtils.cpp: Addressed parallel 
		output issues by redirecting slaves to write to a null device. This change replaces 
		a number of others that have been wound back.

2017-January-15 Struan Robertson

		* CollisionOperator.cpp, ConditionsManager.cpp, AnalysisData.h, 
		main.cpp: More work on parallelizing analysis output (Average energies and populations).

2017-January-09 Struan Robertson

		* CollisionOperator.cpp, ConditionsManager.cpp, ParallelManager.h, AnalysisData.h, 
		main.cpp: More work on parallelizing analysis output (reaction rate coefficient data).

2016-December-30 Struan Robertson

		* CollisionOperator.h/.cpp, ConditionsManager.h/.cpp, ParallelManager.h, System.cpp, 
		main.cpp: Initial attempt at parallelizing analysis output.

2016-December-22 Struan Robertson

		* gDensityOfStates.cpp, DefindeDensityOfStates.cpp: Added a new density of states class